# lockless-allocator

./: .gitignore  CMakeLists.txt  README.md
src/: alexport.def  ll_alloc.c  ll_asm.h
tests/: calloc.c  malloc.c  realloc.c
